After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 671256 - Fix compilation warnings with -Wunused-but-set-variable
Fix compilation warnings with -Wunused-but-set-variable
Status: RESOLVED FIXED
Product: devhelp
Classification: Applications
Component: General
git master
Other Linux
: Normal trivial
: ---
Assigned To: devhelp-maint
devhelp-maint
Depends on:
Blocks:
 
 
Reported: 2012-03-03 14:40 UTC by Aleksander Morgado
Modified: 2012-03-06 13:27 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fixes for the compilation warnings (4.05 KB, patch)
2012-03-03 14:41 UTC, Aleksander Morgado
accepted-commit_now Details | Review

Description Aleksander Morgado 2012-03-03 14:40:06 UTC
dh-search.c:361:23: warning: variable 'link' set but not used [-Wunused-but-set-variable]
dh-search.c:393:23: warning: variable 'list' set but not used [-Wunused-but-set-variable]
dh-search.c:447:23: warning: variable 'priv' set but not used [-Wunused-but-set-variable]
dh-window.c:183:23: warning: variable 'priv' set but not used [-Wunused-but-set-variable]
dh-window.c:334:23: warning: variable 'priv' set but not used [-Wunused-but-set-variable]
dh-window.c:354:23: warning: variable 'priv' set but not used [-Wunused-but-set-variable]
dh-window.c:373:24: warning: variable 'priv' set but not used [-Wunused-but-set-variable]
dh-window.c:1371:24: warning: variable 'priv' set but not used [-Wunused-but-set-variable]
Comment 1 Aleksander Morgado 2012-03-03 14:41:32 UTC
Created attachment 208903 [details] [review]
Fixes for the compilation warnings
Comment 2 Frederic Peters 2012-03-06 13:18:40 UTC
Comment on attachment 208903 [details] [review]
Fixes for the compilation warnings

Thanks, go ahead and push.
Comment 3 Aleksander Morgado 2012-03-06 13:27:10 UTC
This problem has been fixed in our software repository. The fix will go into the next software release. Thank you for your bug report.