search,window: fix compilation warnings

Avoid setting variables which are not used afterwards.

https://bugzilla.gnome.org/show_bug.cgi?id=671256